syntax = "proto3";
package carbonzipperpb3;

//protoc --gofast_out=. carbonapi.proto

message FetchResponse {
    string name = 1;
    int32 startTime = 2;
    int32 stopTime = 3;
    int32 stepTime = 4;
    repeated double values = 5;
    repeated bool isAbsent = 6;
    string requestedTarget = 7;
}

message MultiFetchResponse {
    repeated FetchResponse metrics = 1;
}
